Fix dark mode blockquote

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -224,7 +224,7 @@
 }
 /* Blockquotes */
 .markdown blockquote {
-  @apply text-sm p-0 p-2 mx-6 bg-gray-100 mb-4 border-l-4 border-gray-400 italic;
+  @apply text-sm p-0 p-2 mx-6 bg-secondary mb-4 border-l-4 border-gray-400 italic;
 }
 .markdown blockquote > p {
   @apply mb-0;
